# miniKMS

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/: main.go
docs/: architecture.md  design.md  roadmap.md  vision.md
internal/config/: config.go  env.go
internal/core/: algorithm.go  core.go  crypto.go  engine.go  engine_test.go  errors.go  keystore.go  types.go
internal/crypto/: aes256gsm.go
internal/storage/: bbolt.go  bbolt_test.go  testing.go
internal/transport/grpcsrv/: errors.go  grpcsrv_test.go  server.go
internal/transport/http/: errors.go  handlers.go  router.go  types.go
internal/transport/httpsrv/: errors.go  handlers.go  router.go  types.go
package/sdk/go/: README.md  client.go  datakey.go  encrypt.go  errors.go  go.mod  httpclient.go  kms.go  types.go
package/sdk/go/cmd/testclient/: main.go
package/sdk/node/: README.md  package-lock.json  package.json  test.js  tsconfig.json
package/sdk/node/src/: client.ts  errors.ts  types.ts
package/sdk/python/: README.md  pyproject.toml  test.py
package/sdk/python/minikms/: __init__.py  client.py  types.py
proto/kms/v1/: kms.proto
